# CMAKE_Practice

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/first_my_lib/: CMakeLists.txt
lib/first_my_lib/include/: FirstMyLib.h
lib/first_my_lib/src/: FirstMyLib.cpp
src/: CMakeLists.txt  main.cpp
